# moodle-transcribe

./: .gitignore  README.md  config.example.toml  pyproject.toml
legacy/: Moodle文字起こし.bat  check_cookies.py  moodle_gui.py  moodle_transcribe.py
moodle_transcribe/: __init__.py  auth.py  cli.py  config.py  download.py  gui.py  logging_setup.py  moodle.py  pipeline.py  platform_io.py  routing.py  selfcheck.py
moodle_transcribe/llm/: __init__.py  anthropic_sdk.py  claude_cli.py  openai_sdk.py
moodle_transcribe/transcribe/: __init__.py  groq_api.py  local.py  openai_api.py
scripts/: launcher_macos.command  launcher_windows.bat  setup_unix.sh  setup_windows.ps1
