[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moodle-transcribe"
version = "0.1.0"
description = "Download Moodle/HLS videos and transcribe with Whisper, auto-route via LLM"
requires-python = ">=3.10"
dependencies = [
    # Core
    "imageio-ffmpeg>=0.5",
    "tomli>=2; python_version<'3.11'",
    # Moodle scraping
    "playwright>=1.45",
    "curl-cffi>=0.7",
    # Local Whisper (default)
    "faster-whisper>=1.0",
    # GUI
    "tkinterdnd2>=0.4",
    # Credential storage for auto cookie refresh
    "keyring>=24",
]

[project.optional-dependencies]
gpu = [
    # CUDA runtime DLLs (Windows/Linux NVIDIA)
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cuda-nvrtc-cu12",
]
remote = [
    # Remote transcription / LLM providers
    "anthropic>=0.40",
    "openai>=1.50",
    "groq>=0.11",
    "requests>=2.31",
]
dev = [
    "ruff",
    "pytest",
]

[project.scripts]
moodle-transcribe = "moodle_transcribe.gui:main"
moodle-transcribe-cli = "moodle_transcribe.cli:main"

[tool.setuptools.packages.find]
include = ["moodle_transcribe*"]
exclude = ["legacy*", "scripts*"]

[tool.ruff]
line-length = 110
target-version = "py310"
